--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "frontend":"npm start --prefix ./frontend",
+    "frontend": "npm start --prefix ./frontend",
     "dev": "concurrently \"npm run start\" \" npm run frontend\""
   },
   "author": "",
@@ -14,13 +14,17 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "concurrently": "^8.2.2",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-node": "^0.1.9",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
