--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-node": "^0.1.9",
     "mongoose": "^6.7.3",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
