--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "merninotebook",
-  "version": "1.0.0",
-  "lockfileVersion": 2,
-  "requires": true,
-  "packages": {
-    "": {
-      "name": "merninotebook",
-      "version": "1.0.0",
-      "license": "ISC",
-      "dependencies": {
+    "name": "merninotebook",
+    "version": "1.0.0",
+    "description": "for mern devolepment",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "dev": "node index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
         "bcrypt": "^5.1.0",
         "concurrently": "^8.2.2",
         "cookie-session": "^2.1.0",
@@ -23,9 +24,8 @@
         "passport": "^0.7.0",
         "passport-github2": "^0.1.12",
         "passport-google-oauth20": "^2.0.0"
-      },
-      "devDependencies": {
+    },
+    "devDependencies": {
         "nodemon": "^2.0.20"
-      }
     }
 }
